--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="image-container">
           
         </div>
-        <p style="margin-top: 2rem">Presented by: Mahmoud.s, Mohammed.a, saif.a, jassem, khalifa.r and omar.ab.</p>
+        <p style="margin-top: 2rem">Presented by: Mahmoud.s, saif.a, Abdulaziz, hamdan.k and Mansour.a.</p>
       </div>
 
       <!-- Introduction Slide -->
@@ -196,7 +196,7 @@
           </div>
           <div class="image-container">
             <img
-              src="sugar.png"
+              src="C:\TESTP\School\sugar.png"
               alt="Hidden sugars in food"
               style="max-height: 300px; object-fit: contain"
             />
